<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.a224tech.bmc208_assignment2.Login">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorAccent4">

                <ImageView
                    android:layout_marginTop="25dp"
                    android:src="@drawable/user"
                    android:layout_gravity="center"
                    android:layout_width="125dp"
                    android:layout_height="125dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/admin_login"
                    android:textColor="@color/colorAccent5"
                    android:textSize="22sp"
                    />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="80dp"
                    android:background="@color/colorAccent4"
                    android:drawableLeft="@drawable/usern"
                    android:drawableStart="@drawable/usern"
                    android:hint="@string/username"
                    android:padding="10dp"
                    android:textColorHint="@color/colorAccent5" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorAccent4"
                    android:drawableLeft="@drawable/lock"
                    android:drawableStart="@drawable/lock"
                    android:hint="@string/password"
                    android:inputType="numberPassword"
                    android:padding="10dp"
                    android:textColorHint="@color/colorAccent5" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorAccent4"
                    android:onClick="submitLogin"
                    android:text="@string/login"
                    android:textColor="@color/colorAccent5" />



            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>